fixed z-index not working with webkit-overflow-scrolling:touch on ios16 (worked on ios15)

--- a/css/board.css
+++ b/css/board.css
@@ -217,7 +217,7 @@ body {
     display: flex;
     flex-direction: column;
     -webkit-user-select: none;
-    -webkit-overflow-scrolling: touch;
+    /*-webkit-overflow-scrolling: touch;*/
     -webkit-user-drag: none;
 }
 
